--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
+<!doctype html>
 <html>
+  <head>
+    <meta charset="UTF-8">
+  </head>
 
-<img src="./images/my_picture.jpg">
+  <img src="./images/my_picture.jpg">
 
-<p style = "font-size:20pt">ABOUT</p>
-<div style="line-height:25px; font-size:13pt">AHyeon Pyeon(편아현)<br>
-Network Data Science Lab<br>
-undergraduate research student<br>
-Sangmyung University, Cheonan<br>
-Education : 2021. 03 ~ <br><br></div>
+  <p style = "font-size:20pt">ABOUT</p>
+  <div style="line-height:25px; font-size:13pt">AHyeon Pyeon(편아현)<br>
+  Network Data Science Lab<br>
+  undergraduate research student<br>
+  Sangmyung University, Cheonan<br>
+  Education : 2021. 03 ~ <br><br></div>
 
-<hr>
-<p style = "font-size:20pt">CONTACT</p>
-<div style="line-height:25px; font-size:13pt">phone : (+82)010-3402-0072<br>
-e-mail : piona9355@naver.com</div>
-
+  <hr>
+  <p style = "font-size:20pt">CONTACT</p>
+  <div style="line-height:25px; font-size:13pt">phone : (+82)010-3402-0072<br>
+  e-mail : piona9355@naver.com</div>
 </html>
-
