--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
   </head>
 
-  <img src="../my_picture.jpeg">
+  <img src="../my_picture.jpeg" width="75" height="100">
 
   <p style = "font-size:20pt">ABOUT</p>
   <div style="line-height:25px; font-size:13pt">AHyeon Pyeon(편아현)<br>
